<resources>
    <string name="app_name">CUREYA_Chatbot</string>
    <string name="title_activity_chat_navigation">ChatNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_options">Language Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_counsellor">Counsellor</string>
    <string name="menu_report">Contact Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="gender_title">Are you ?</string>
    <string name="name_title">Hi,What is your nick name?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next_btn">Next</string>
    <string name="location_title">Your Location</string>
    <string name="city_state_sample">Jaipur,Rajasthan</string>
    <string name="action_bar_title">Hey</string>
    <string name="btn_done">Done</string>
    <string name="profession_example">Example:Student, Employee</string>
    <string name="edt_profession_hint">Enter Your Profession here</string>
    <string name="profession_title">Who are you?</string>
    <string name="age_title">Tell me your Age ?</string>
    <string name="name_hint">Your Nickname</string>
    <string name="age_hint">Enter your Age here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_name">User A</string>
    <string name="content_desc_chatbutton">chatButton</string>
    <string name="content_desc_counsellorbutton">counsellorButton</string>
    <string name="dummy_welcome_nickname">Welcome,nickname</string>
    <string name="welcome_text">My name is Cureya, I am your personal assistant. You can share everything with me</string>
    <string name="Counsellor_Text">Heyy, Tap the below Icon to connect with our Counsellor. You can share everything with them after that.</string>
    <string name="dummy_profile_name">Hrishita Mavani</string>
    <string name="dummy_profile_email">hrishitamavani@gmail.com</string>
    <string name="dummy_age">19 </string>
    <string name="btn_save">Save</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="relaxation">Relaxation</string>
    <string name="go_to_navigation">GO TO NAVIGATION</string>
    <string name="name">Name</string>
    <string name="e_mail_id">E-mail Id</string>
    <string name="select_language">Select Language</string>
    <string name="your_language">Your Language</string>
    <string name="select">Select</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">New User Registration</string>
    <string name="action_sign_in_short">User Login</string>
    <string name="common_register_button_text">Register</string>
    <string name="common_signup_with_google_button_text">Sign up with Google</string>
    <string name="common_signin_with_google_button_text">Sign in with Google</string>
    <string name="common_login_button_text">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Quiz" translatable="false">"View Quiz"</string>
    <string name="AddQuiz" translatable="false">"Add Quiz"</string>
    <string name="submit_ans" translatable="false">"Submit Answer"</string>
</resources>