<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhiteBack"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rl_profile"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfilePhoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/dummy_image">

        </de.hdodenhof.circleimageview.CircleImageView>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imgProfileSelect"
            android:layout_marginLeft="70dp"
            android:layout_alignStart="@id/imgProfilePhoto"
            android:layout_alignEnd="@id/imgProfilePhoto"
            android:layout_alignBottom="@id/imgProfilePhoto"
            android:src="@drawable/dp_change_button">

        </de.hdodenhof.circleimageview.CircleImageView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_profile"
        android:id="@+id/ll_profile"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:background="@color/colorWhiteBack"
        android:id="@+id/edtUpdateName"
        android:layout_marginTop="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:hint="@string/name"
        app:startIconDrawable="@drawable/ic_baseline_person_small_24"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:text="@string/dummy_profile_name"
            android:fontFamily="@font/roboto_regular"
            android:textStyle="normal"
            android:background="@color/colorWhiteBack"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/edtUpdateAge"
            android:layout_marginTop="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
            android:hint="Age"
            app:suffixText="Years"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:text="@string/dummy_age"
                android:fontFamily="@font/roboto_regular"
                android:textStyle="normal"
                android:background="@color/colorWhiteBack"
                android:layout_height="match_parent">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/edtUpdateEmail"
            android:layout_marginTop="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:hint="@string/e_mail_id"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:text="@string/dummy_profile_email"
                android:fontFamily="@font/roboto_regular"
                android:textStyle="normal"
                android:background="@color/colorWhiteBack"
                android:layout_height="match_parent">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button_rounded"
            android:id="@+id/btnProfileSave"
            android:text="@string/btn_save"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>