<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhiteBack"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/actionBarName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimaryGreen"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:id="@+id/txtActionBarName"
            android:text="@string/action_bar_title"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"

            >

        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUserName"
        app:layout_constraintTop_toBottomOf="@id/actionBarName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        app:civ_border_width="2dp"
        android:translationY="25dp"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        app:civ_border_color="@color/colorLightGrey"
        android:src="@drawable/ic_baseline_person_24"
        android:layout_height="wrap_content">

    </de.hdodenhof.circleimageview.CircleImageView>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/imgUserName"
        android:id="@+id/txtNameTitle"
        android:text="@string/action_sign_in_short"
        android:gravity="center"
        android:translationY="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorDarkGrey"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"

        >

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/edtName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:translationY="35dp"
        app:boxStrokeColor="@color/colorSecondaryGreen"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="45dp"
        android:hint="@string/prompt_email"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorDarkGrey"
        app:layout_constraintTop_toBottomOf="@id/txtNameTitle"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/edtpassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginStart="45dp"
        android:layout_marginTop="85dp"
        android:translationY="45dp"
        app:boxStrokeColor="@color/colorSecondaryGreen"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="45dp"
        android:hint="@string/prompt_password"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorDarkGrey"
        app:layout_constraintTop_toBottomOf="@id/txtNameTitle"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="textPassword"
            android:textAlignment="center">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/edtName"
        app:layout_constraintTop_toBottomOf="@id/edtName"
        android:id="@+id/submit"
        android:text="@string/common_login_button_text"
        android:gravity="center"
        app:fontFamily="@font/roboto_bold"
        android:textStyle="bold"
        android:translationY="145dp"
        android:textColor="@color/colorSecondaryGreen"

        android:fontFamily="@font/roboto_regular"
        android:textSize="20sp"

        >

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/edtName"
        app:layout_constraintTop_toBottomOf="@id/edtName"
        android:id="@+id/register"
        android:text="@string/common_register_button_text"
        android:gravity="center"
        app:fontFamily="@font/roboto_bold"
        android:textStyle="bold"
        android:translationY="185dp"
        android:textColor="@color/colorSecondaryGreen"
        android:fontFamily="@font/roboto_regular"
        android:textSize="20sp"

        >

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signin_with_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/common_signin_with_google_button_text"
        android:textColor="@color/colorSecondaryGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationY="145dp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName"/>



</androidx.constraintlayout.widget.ConstraintLayout>