<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteBack"
    tools:context=".ChangeLanguage">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbarLangapp"

        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/Theme.CUREYA_Chatbot.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarLang"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.CUREYA_Chatbot.PopupOverlay" >

            <ImageView
                android:layout_width="wrap_content"
                android:id="@+id/imgBackArrowLang"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/colorWhite"
                android:foregroundGravity="left"
                android:layout_marginStart="10dp"
                android:layout_gravity="start"
                android:layout_height="wrap_content">

            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/colorWhite"
                android:text="@string/select_language"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_bold"
                android:textSize="18sp"

                android:layout_height="wrap_content">

            </TextView>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLangapp"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/select"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp"
        android:id="@+id/txtlangtitle"
        android:textColor="@color/colorDarkGrey"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/txtlangtitle"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:id="@+id/txtlangsubtitle"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/your_language"
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:paddingEnd="5dp"
        android:textColor="@color/colorPrimaryGreen"
        android:layout_height="wrap_content">
    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/cardhindi"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/colorLightGreen"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtlangsubtitle"
        app:cardCornerRadius="5dp"
        android:background="@color/colorLightGreen"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/hindi"
            android:layout_margin="7dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/txthindi"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

        </TextView>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/cardeng"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/colorLightGreen"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/cardhindi"
        app:cardCornerRadius="5dp"
        android:background="@color/colorLightGreen"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/english"
            android:layout_margin="7dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/txteng"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

        </TextView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>